fixed a css bug which made google chrome print the content too small

--- a/assets/print.css
+++ b/assets/print.css
@@ -1,6 +1,6 @@
 @page {
   size: A4;
-  margin: 0 auto;
+  margin: 5mm;
   display: block;
 }
 
