--- a/scss/_container.scss
+++ b/scss/_container.scss
@@ -1,6 +1,7 @@
 .main-container {
   position: relative;
   max-width: 1280px;
+  min-height: 100vh;
   margin: 0 auto;
   display: flex;
 }
